--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@opennextjs/cloudflare": "^1.3.0",
     "lucide-react": "^0.522.0",
     "next": "15.3.3",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
