--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@opennextjs/cloudflare": "^1.3.0",
+    "@rive-app/react-canvas": "^4.21.4",
     "lucide-react": "^0.522.0",
     "next": "15.3.3",
     "next-themes": "^0.4.6",
