Update build scripts in package.json: modify build command to use opennextjs-cloudflare and add separate build:next command for Next.js, ensuring compatibility with deployment processes.

--- a/package.json
+++ b/package.json
@@ -36,9 +36,10 @@
   },
   "private": true,
   "scripts": {
-    "build": "next build",
+    "build": "opennextjs-cloudflare build",
+    "build:next": "next build",
     "cf-typegen": "wrangler types --env-interface CloudflareEnv env.d.ts",
-    "check": "npm run build && tsc",
+    "check": "npm run build:next && tsc",
     "deploy": "opennextjs-cloudflare build && opennextjs-cloudflare deploy",
     "dev": "next dev",
     "lint": "next lint",
