Refactor build scripts in package.json: streamline build commands by consolidating Next.js and Cloudflare build processes, ensuring clarity and compatibility in deployment workflows.

--- a/package.json
+++ b/package.json
@@ -36,10 +36,10 @@
   },
   "private": true,
   "scripts": {
-    "build": "opennextjs-cloudflare build",
-    "build:next": "next build",
+    "build": "next build",
+    "build:cloudflare": "opennextjs-cloudflare build",
     "cf-typegen": "wrangler types --env-interface CloudflareEnv env.d.ts",
-    "check": "npm run build:next && tsc",
+    "check": "npm run build && tsc",
     "deploy": "opennextjs-cloudflare build && opennextjs-cloudflare deploy",
     "dev": "next dev",
     "lint": "next lint",
